# stm32-base

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: hal_isr.c  hal_msp.c  main.c  stm32f4xx_hal_conf.h
src/core/: stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h
